:bug: bug(button.scss): Fixed issue with the incorrect margin used to overlap element borders for button and form groups

--- a/src/core/button.scss
+++ b/src/core/button.scss
@@ -428,7 +428,7 @@
                 /* Style the last child in group > 1 buttons */
                 border-top-left-radius: 0;
                 border-bottom-left-radius: 0;
-                margin-left: -0.1rem;
+                margin-left: -1px;
             }
 
             &:not(:first-child):not(:last-child) {
